# crewai_stock_analysis

./: README.md
crewai/analysis/: amzn_stock_analysis.md  msft_stock_analysis.md  nflx_stock_analysis.md  tsla_stock_analysis.md
crewai/yfinance/: .gitignore  README.md  pyproject.toml
crewai/yfinance/src/yfinance/: crew.py  main.py  principles.txt  ticker.csv
crewai/yfinance/src/yfinance/config/: agents.yaml  tasks.yaml
crewai/yfinance/src/yfinance/tools/: stock_analysis_tool.py
