[project]
name = "yfinance"
version = "0.1.0"
description = "yfinance using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
yfinance = "yfinance.main:run"
run_crew = "yfinance.main:run"
train = "yfinance.main:train"
replay = "yfinance.main:replay"
test = "yfinance.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
